updated swagger, session object
