# src/server/controllers/login.ts
@@ -33,6 +33,12 @@ module.exports.signup = function (req: api.Request & swaggerTools.Swagger20Reque
                 res.end()
             }
             else {
+                var bcrypt = require('bcryptjs');
+                var salt = bcrypt.genSaltSync(10);
+                var hash = bcrypt.hashSync(req.swagger.params.userinfo.value.password, salt);
+
+                req.swagger.params.userinfo.value.password = hash;
+                
                 db.users.insertOne(req.swagger.params.userinfo.value).then((writeOpResult) => {
                     if (req.session) {
                         req.session.username = req.swagger.params.userinfo.value.username
@@ -69,22 +75,40 @@ module.exports.userLogin = function (req: any, res: any, next: any) {
     // These should always be filled out because of the swagger validation, but we should still
     // probably check them.
     if (req.swagger.params.userinfo.value.username && req.swagger.params.userinfo.value.password) {
-        db.users.findOne(req.swagger.params.userinfo.value).then((user) => {
-            if (user) {
-                if (req.session) {
-                    req.session.username = req.swagger.params.userinfo.value.username
-                    req.session.userid = user._id
-                }
+        db.users.findOne({ 'username': req.swagger.params.userinfo.value.username }).then((user) => {
+            var bcrypt = require('bcryptjs');
 
-                res.status(OK)
-                res.send(JSON.stringify({ message: "It worked!" }, null, 2))
-                res.end()
+            if (user != null)
+            {
+                var hash = user.password;
+                var success = bcrypt.compare(req.swagger.params.userinfo.value.password, hash);
+
+                if (success) {
+                    req.swagger.params.userinfo.value.password = hash;
+                }
             }
-            else {
-                res.status(BadRequest)
-                res.send(JSON.stringify({ message: "Username and password did not match any known user" }, null, 2))
+
+            db.users.findOne(req.swagger.params.userinfo.value).then((user) => {
+                if (user) {
+                    if (req.session) {
+                        req.session.username = req.swagger.params.userinfo.value.username
+                        req.session.userid = user._id
+                    }
+    
+                    res.status(OK)
+                    res.send(JSON.stringify({ message: "It worked!" }, null, 2))
+                    res.end()
+                }
+                else {
+                    res.status(BadRequest)
+                    res.send(JSON.stringify({ message: "Username and password did not match any known user, your hash is: "}, null, 2))
+                    res.end()
+                }
+            }).catch((err) => {
+                res.status(InternalServerError)
+                res.send(JSON.stringify({ message: inspect(err) }, null, 2))
                 res.end()
-            }
+            })
         }).catch((err) => {
             res.status(InternalServerError)
             res.send(JSON.stringify({ message: inspect(err) }, null, 2))
@@ -115,3 +139,22 @@ module.exports.userLogout = function (req: any, res: any, next: any) {
     res.send(JSON.stringify({ message: `Logged out user: ${username} ${userid}` }, null, 2))
     res.end()
 }
+
+module.exports.SchedulerLogout = function (req: any, res: any, next: any) {
+    // print out the params
+    console.log(util.inspect(req.swagger.params, false, Infinity, true))
+
+    let username, userid
+    if (req.session) {
+        username = req.session.username
+        userid = req.session.userid
+        delete req.session.userid
+        delete req.session.username
+        delete req.session.type
+    }
+
+    res.setHeader('Content-Type', 'application/json')
+    res.status(OK)
+    res.send(JSON.stringify({ message: `Logged out scheduler: ${username} ${userid}` }, null, 2))
+    res.end()
+} 
